<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CheckinLibraryActivity!</string>
    <string name="app_name">Checkin_library</string>
    <string name="no_data">No data present!</string>
    <string name="about_usa_football_header">About USA Football</string>
    <string name="about_usa_football_text">Football\'s national governing body leads the game\'s developement, inspires participation and ensures a positive experience for all youth, high school and other amateur players.</string>
    <string name="about_usa_football_text_detail">Endowed by the NFL and NFLPA in 2002, USA Football is the official youth football development partner of the NFL, its 32 teams and the NFL Player Association and manages&#160; U.S. national teams for international competition. USA Football is an independent 501-c-3 non-profit organization that leads the development of the game through educational programs and innovative resources. USA Football also annually awards \u00241 million in equipment grants and subsidizes league volunteer background checks.</string>
    <string name="my_good">It\'s your good.</string>
    <string name="you_raised_text">You\'ve raised a pledge amount of:</string>
    <string name="your_checkin_text">Your Check-ins</string>
    <string name="my_good_text">Thanks for doing good by supporting the businesses and causes that strengthen our communities.</string>
    <string name="watch_video_overview">How to check-in to \nsupport player safety.</string>
    <string name="watch_video_text">It\'s easy to do good.</string>
    <string name="how_it_works">How it Works</string>
    <string name="how_it_works_business_header_text">Raise money and save by supporting local businesses</string>
    <string name="how_it_works_business_snap_checkin">SNAP Check-in\'s. They\'re quick and simple.</string>
    <string name="how_it_works_cause_header_text">Help a cause, or two, or more. Do Good.</string>
    <string name="how_it_works_rules">View the rules for tackle \nand flag football.</string>
    <string name="how_it_works_business_tap">Tap the &lt;b>\'Check-in\'&lt;/b> tab to find businesses that support the USA Football Player Safety Initiative.</string>
    <string name="how_it_works_business_find">Once you find a business, Check-in to redeem the offer and that business will make a donation to support the cause.</string>
    <string name="how_it_works_sharing_settings">Link Your Facebook and/or Twitter accounts &amp; share your check-in\'s. You\'ll raise more &amp; share the good you\'re doing.</string>
    <string name="how_it_works_sharing_settings_2">You can delay sharing, allowing your check-in to display hours after you\'ve checked-in.</string>
    <string name="how_it_works_find_cause">Find Causes >></string>
    <string name="how_it_works_find_business">Find businesses >></string>
    <string name="how_it_works_overview">Watch the overview</string>
    <string name="how_it_works_scan">Some businesses require customers to scan a code  when checking in.</string>
    <string name="how_it_works_share">Setup your Facebook and Twitter accounts so you can tell others about the money you\'re raising</string>
    <string name="how_it_works_snap_top">Some Businesses require snap verification when you check-in.</string>
    <string name="how_it_works_snap_bottom">Simply open your camera, point your phone at the SNAP code the business displays and your check-in will be complete.</string>
    <string name="how_it_works_swipe">Swipe for the next tip >></string>
    <string name="how_it_works_rules_tap">Tap the &lt;b>\'Rules\'&lt;/b> tab and choose from the list to view official rules and approved rulings on categories such as game elements, penalties, areas on the field and more. All the rules you need to know are there and understanding them is easier than ever with diagrams, tips, and graphics.</string>
    <string name="how_it_works_safety_header">Stay Heads Up on \nplayer safety</string>
    <string name="how_it_works_safety">Tap the &lt;b>\'Safety\'&lt;/b> tab to access USA Football\'s health and safety content. All the information you need to make a better, safer game is available at your fingertips. Read the latest articles, learn the signs and symptoms of concussions, watch videos on how to tackle and much more.</string>
    <string name="label">Heads Up Football</string>
    <string name="login_create">Create Account</string>
    <string name="login_do_good">Do good</string>
    <string name="login_text">Sign in</string>
    <string name="login_email">Email Address</string>
    <string name="login_forgot">Forgot Your Password?</string>
    <string name="login_password">Password</string>
    <string name="login_sign">Sign-in</string>
    <string name="login_start">Start raising money</string>
    <string name="social_signup_text">Sign up with</string>
    <string name="social_signup_privacy_text">We will never post anything to your\nfacebook or twitter account without\nyour permission.</string>
    <string name="social_signup_or">- OR -</string>
    <string name="social_signin_text">Sign in with</string>
    <string name="sharePrefProgressMessage">Fetching social credentials\..\. Please wait</string>
    <string name="forgot_email">Enter Your Email Address</string>
    <string name="forgot_notification">Send Notification</string>
    <string name="create">Create</string>
    <string name="create_account">Create Account</string>
    <string name="create_first_name">First Name</string>
    <string name="create_last_name">Last Name</string>
    <string name="privacy_control">Privacy Controls</string>
    <string name="privacy_control_details">Don\'t want people knowing where you are? \nDelay when your check-in appears on social networks.</string>
    <string name="raised">You\'ve raised: $0.00</string>
    <string name="waiting_for_twitter">Waiting for Twitter to respond!</string>
    <string name="waiting_for_facebook">Waiting for Facebook to respond!</string>
    <string name="business_none">No businesses found.</string>
    <string name="powered_by">POWERED BY CHECK-IN FOR GOOD</string>
    <string name="business_list_address">Address</string>
    <string name="business_arrow">Arrow</string>
    <string name="business_list_miles">mi</string>
    <string name="business_list_distance">Distance</string>
    <string name="search_hint">Search</string>
    <string name="search_label">Search</string>
    <string name="searched">You searched: </string>
    <string name="business_checkin_address">Business Address\n</string>
    <string name="business_checkin_map">MAP IT</string>
    <string name="business_checkin_name">Business Name</string>
    <string name="business_checkin_offer">Business offer</string>
    <string name="business_checkin_private">Private Check-in\n you raise\n $2</string>
    <string name="business_checkin_public">Public Check-in\n you raise\n $2</string>
    <string name="business_checkin_share">Share your check-in with friends</string>
    <string name="business_checkin">CHECK-IN FOR GOOD</string>
    <string name="business_Offer_valid">Check-in times: </string>
    <string name="snapnow_page_text">This business requires customers to SNAP their code to Check-in.</string>
    <string name="snapnow_page_text1">Look for the Check-in for Good SNAP display and tap the button below</string>
    <string name="snapnow_page_text2">This SNAP barcode isn\'t working. Please ask an employee for assistance or try snapping it again.</string>
    <string name="thank_you">Thank you</string>
    <string name="checkin_find">Tap the Business tab to find more Check-ins.</string>
    <string name="delink_text">Logout and unlink account</string>
    <string name="how_it_works_checkin">Raise money and save \nwhen you check-in.</string>
    <string name="how_it_works_qr">SNAP Check-in\'s.\nThey\'re quick and simple.</string>
    <string name="how_it_works_share">Sharing your check-in \nis like doing double good.</string>
    <string name="social_share_header">Set up social sharing </string>
    <string name="social_share_desc">Raise more when you share.</string>
    <string name="social_share_icon">Offers and sharing are powered by\nCheck-in for Good.</string>
    <string name="find_more_businesses">Find More Businesses</string>
    <string name="how_it_works_sharing_btn_text">Set Up Sharing</string>

    <style name="medtext">
        <item name="android:text">Medium Text</item>
        <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textSize">18dp</item>
    </style>

    <string name="businessProgressMessage">Finding participating businesses near you.</string>
    <string name="causeProgressMessage">Finding causes near your area.</string>
    <string name="signInProgressMessage">Signing in..\. Please wait</string>
    <string name="checkinProgressMessage">Checking-in</string>
    <string name="searchProgressMessage">"Searching.. Please wait</string>
    <string name="signupProgressMessage">Signing up.. Please wait</string>
    <string name="forgotPwdProgressMessage">Retrieving your password..\. Please wait</string>
    <string name="supportusafootball">Support USA Football</string>
    <string name="delinkProgressMessage">Unlink your account..\. Please wait</string>
    <string name="supportusafootballdesc">by checking in at participating businesses</string>
    <string name="supportusafootballmessage">Businesses and youth leagues interested in\n participating and reaching the football\n community can sign-up for free at</string>
    <string name="headsupBusinessesViewMessage"> Support us by checking in at participating businesses. Every time you check-in a donation is made.</string>
    <string name="business_all">All</string>
    <string name="business_supporting">Supporting My Causes</string>
    <string name="defaultProgressMessage">Loading..\.</string>
    <string name="social_signin_or_signup_text">Sign in / Sign up with</string>
    <string name="social_have_account"> &lt;u>Sign in with an email&lt;/u></string>
    <string name="concussion_list_data">Concussion Data</string>
    <string name="signup_with_email">Sign up with an email address</string>

</resources>