<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/blue_bg"
    android:orientation="vertical" >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollbarlogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/forgotPasswordForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ImageViewForgotPwdInLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/headsup_logo"
                android:contentDescription="@string/label" />

            <TextView
                android:id="@+id/forgotPwdHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/login_forgot"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textSize="8pt" >
            </TextView>

            <TextView
                android:id="@+id/forgotPwdMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textSize="6pt" >
            </TextView>

            <TextView
                android:id="@+id/emailIdMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:text="@string/forgot_email"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textSize="8pt" >
            </TextView>

            <EditText
                android:id="@+id/EditForgotPwdEmail"
                style="@style/inputText"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress" >
            </EditText>

            <Button
                android:id="@+id/ButtonSendNotification"
                style="@style/loginText"
                android:layout_marginLeft="33dp"
                android:layout_marginRight="33dp"
                android:background="@drawable/green_btn"
                android:onClick="forgotPassword"
                android:text="@string/forgot_notification" >
            </Button>
        </LinearLayout>
    </ScrollView>
>

</LinearLayout>